--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Tue Nov 14 10:10:49 GMT 2017
+#Tue Jul 11 12:36:02 CEST 2017
 redeployment.enabled=true
 encoding=UTF-8
 domain=default
